--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,5 +1,81 @@
 <header class="header">
-  <div class="header__container">
-
-  </div>
+    <div class="header__top">
+        <div class="header__logo"><a href=""><img src="img" alt="Logo"></a></div>
+        <div class="header-interactive">
+            <div class="header-interactive__container">
+                <div class="header-interactive__body">
+                    <button class="header-menu-icon">
+                        <span></span>
+                    </button>
+                    <div class="header-search">
+                        <input type="text" class="header-search__input" placeholder="Поиск товаров">
+                        <button class="header-search__btn">
+                            <svg width="18" height="18">
+                                <use xlink:href="img/icons/icons.svg#search" fill="#fff"></use>
+                            </svg>
+                            <span>Искать</span>
+                        </button>
+                    </div>
+                    <div data-dropDown class="header-contacts">
+                        <button data-dropDown-button class="header-contacts__btn">
+                            <svg width="30" height="30">
+                                <use xlink:href="img/icons/icons.svg#phone"></use>
+                            </svg>
+                        </button>
+                        <div class="header-contacts__body">
+                            <ul class="header-socials">
+                                <li class="header-socials__item">
+                                    <a href="">
+                                        <svg width="25" height="25">
+                                            <use xlink:href="img/icons/icons.svg#telegram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="header-socials__item">
+                                    <a href="">
+                                        <svg width="25" height="25">
+                                            <use xlink:href="img/icons/icons.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="header-phones">
+                                <li class="header-phones__item"><a href="">088-544-4800</a></li>
+                                <li class="header-phones__item"><a href="">544-448-7859</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <button class="header-cart">
+                        <span class="header-cart__text">Корзина</span>
+                        <svg width="30" height="30">
+                            <use xlink:href="img/icons/icons.svg#cart"></use>
+                        </svg>
+                        <span class="header-cart__number">3</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <nav class="header__bottom">
+        <div class="header__container">
+            <ul class="header-menu">
+                <li class="header-menu__item">
+                    <div class="header-catalog" data-dropDown>
+                        <button class="header-catalog__btn" type="button" data-dropDown-button>Каталог</button>
+                        <ul class="header-catalog__list">
+                            <li class="hedaer-catalog__item"><a href="">Ноутбуки</a></li>
+                            <li class="hedaer-catalog__item"><a href="">Роутеры</a></li>
+                            <li class="hedaer-catalog__item"><a href="">Роутеры</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="header-menu__item">Акции</li>
+                <li class="header-menu__item">Оплата</li>
+                <li class="header-menu__item">Гарантия</li>
+                <li class="header-menu__item">Контакты</li>
+                <li class="header-menu__item">Доставка</li>
+                <li class="header-menu__item">О нас</li>
+            </ul>
+        </div>
+    </nav>
 </header>
