Mobile menu view was finished. In vrars.scss I added variable for transition values. DropDown module was improved by adding dynamic control for the height of the element

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -57,25 +57,23 @@
         </div>
     </div>
     <nav class="header__bottom">
-        <div class="header__container">
-            <ul class="header-menu">
-                <li class="header-menu__item">
-                    <div class="header-catalog" data-dropDown>
-                        <button class="header-catalog__btn" type="button" data-dropDown-button>Каталог</button>
-                        <ul class="header-catalog__list">
-                            <li class="hedaer-catalog__item"><a href="">Ноутбуки</a></li>
-                            <li class="hedaer-catalog__item"><a href="">Роутеры</a></li>
-                            <li class="hedaer-catalog__item"><a href="">Роутеры</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="header-menu__item">Акции</li>
-                <li class="header-menu__item">Оплата</li>
-                <li class="header-menu__item">Гарантия</li>
-                <li class="header-menu__item">Контакты</li>
-                <li class="header-menu__item">Доставка</li>
-                <li class="header-menu__item">О нас</li>
-            </ul>
-        </div>
+        <ul class="header-menu">
+            <li class="header-menu__item">
+                <div class="header-catalog" data-dropDown>
+                    <button class="header-catalog__btn" type="button" data-dropDown-button>Каталог</button>
+                    <ul data-dropDown-body class="header-catalog__list">
+                        <li class="hedaer-catalog__item"><a href="">Ноутбуки</a></li>
+                        <li class="hedaer-catalog__item"><a href="">Роутеры</a></li>
+                        <li class="hedaer-catalog__item"><a href="">Роутеры</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li class="header-menu__item"><a href="">Акции</a></li>
+            <li class="header-menu__item"><a href="">Оплата</a></li>
+            <li class="header-menu__item"><a href="">Гарантия</a></li>
+            <li class="header-menu__item"><a href="">Контакты</a></li>
+            <li class="header-menu__item"><a href="">Доставка</a></li>
+            <li class="header-menu__item"><a href="">О нас</a></li>
+        </ul>
     </nav>
 </header>
