Mobile menu was finished

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -4,7 +4,7 @@
         <div class="header-interactive">
             <div class="header-interactive__container">
                 <div class="header-interactive__body">
-                    <button class="header-menu-icon">
+                    <button class="header-menu-icon js-icon-menu">
                         <span></span>
                     </button>
                     <div class="header-search">
