Dropdown module was improved by adding feature that allows to close if click was ouside of the element

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -22,7 +22,7 @@
                                 <use xlink:href="img/icons/icons.svg#phone"></use>
                             </svg>
                         </button>
-                        <div class="header-contacts__body">
+                        <div data-dropDown-body class="header-contacts__body">
                             <ul class="header-socials">
                                 <li class="header-socials__item">
                                     <a href="">
