--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     @@include('html/header.html')
 
     <main class="page">
-
+      @@include('html/cart-popup.html')
     </main>
 
     @@include('html/footer.html')
