Cart popup started to work

--- a/src/html/cart-popup.html
+++ b/src/html/cart-popup.html
@@ -49,7 +49,7 @@
             </label>
             <div class="form__footer">
                 <button class="form__btn" type="submit">Оформить заказ</button>
-                <button data-close type="button" class="cart__continue">Продолжить покупки</button>
+                <button data-close type="button" class="cart__continue button-close">Продолжить покупки</button>
             </div>
         </form>
     </div>
