--- a/src/html/cart-popup.html
+++ b/src/html/cart-popup.html
@@ -48,7 +48,7 @@
                     placeholder="Адрес доставки и пожелания..."></textarea>
             </label>
             <div class="form__footer">
-                <button class="form__btn" type="submit">Оформить заказ</button>
+                <button class="form__btn button" type="submit">Оформить заказ</button>
                 <button data-close type="button" class="cart__continue button-close">Продолжить покупки</button>
             </div>
         </form>
