--- a/src/html/header.html
+++ b/src/html/header.html
@@ -63,7 +63,7 @@
             <li class="header-menu__item">
                 <div class="header-catalog" data-spollers>
                     <button class="header-catalog__btn" type="button" data-spoller>Каталог</button>
-                    <ul data-dropDown-body class="header-catalog__list">
+                    <ul class="header-catalog__list">
                         <li class="hedaer-catalog__item"><a href="">Ноутбуки</a></li>
                         <li class="hedaer-catalog__item"><a href="">Роутеры</a></li>
                         <li class="hedaer-catalog__item"><a href="">Роутеры</a></li>
