Categories section is ready. Margin was added to main block and for each section

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,76 @@
 
     <main class="page">
       @@include('html/cart-popup.html')
+      <section class="categories">
+        <div class="categories__container">
+          <ul class="categories__list">
+            <li class="categories-item">
+              <a class="categories-item__link" href="">
+                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
+                <h2 class="categories-item__title">Ноутбуки</h2>
+              </a>
+            </li>
+            <li class="categories-item">
+              <a class="categories-item__link" href="">
+                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
+                <h2 class="categories-item__title">Ноутбуки</h2>
+              </a>
+            </li>
+            <li class="categories-item">
+              <a class="categories-item__link" href="">
+                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
+                <h2 class="categories-item__title">Ноутбуки</h2>
+              </a>
+            </li>
+            <li class="categories-item">
+              <a class="categories-item__link" href="">
+                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
+                <h2 class="categories-item__title">Ноутбуки</h2>
+              </a>
+            </li>
+            <li class="categories-item">
+              <a class="categories-item__link" href="">
+                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
+                <h2 class="categories-item__title">Ноутбуки</h2>
+              </a>
+            </li>
+            <li class="categories-item">
+              <a class="categories-item__link" href="">
+                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
+                <h2 class="categories-item__title">Ноутбуки</h2>
+              </a>
+            </li>
+            <li class="categories-item">
+              <a class="categories-item__link" href="">
+                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
+                <h2 class="categories-item__title">Ноутбуки</h2>
+              </a>
+            </li>
+            <li class="categories-item">
+              <a class="categories-item__link" href="">
+                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
+                <h2 class="categories-item__title">Ноутбуки</h2>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="new">
+        <div class="new__container">
+          <h2 class="new__title"></h2>
+          <div class="new__slider swiper">
+            <div class="new__wrapper swiper-wrapper">
+              <div class="new-slide swiper-slide">
+                <div class="new-slide__img"><a href=""><img src="img/category.jpg" alt="laptop"></a></div>
+                <h3 class="new-slide__title"><a href=""></a></h3>
+                <div class="new-slide__bottom">
+                  <div class="new-slide__price"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     @@include('html/footer.html')
