The new section and product card section are ready.

--- a/src/index.html
+++ b/src/index.html
@@ -66,18 +66,78 @@
       </section>
       <section class="new">
         <div class="new__container">
-          <h2 class="new__title"></h2>
+          <h2 class="new__title title-second">Новинки</h2>
           <div class="new__slider swiper">
             <div class="new__wrapper swiper-wrapper">
-              <div class="new-slide swiper-slide">
-                <div class="new-slide__img"><a href=""><img src="img/category.jpg" alt="laptop"></a></div>
-                <h3 class="new-slide__title"><a href=""></a></h3>
-                <div class="new-slide__bottom">
-                  <div class="new-slide__price"></div>
+              <div class="product-card swiper-slide">
+                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a></div>
+                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                    (G733PY-XS96)</a></h3>
+                <div class="product-card__bottom">
+                  <div class="product-card__price">
+                    <p class="product-card__old-price">19999 грн</p>
+                    <p class="product-card__actual-price">15000 грн</p>
+                  </div>
+                  <a href="" class="product-card__buy button">Купить</a>
+                </div>
+              </div>
+              <div class="product-card swiper-slide">
+                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a></div>
+                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a></h3>
+                <div class="product-card__bottom">
+                  <div class="product-card__price">
+                    <p class="product-card__old-price">19999 грн</p>
+                    <p class="product-card__actual-price">15000 грн</p>
+                  </div>
+                  <a href="" class="product-card__buy button">Купить</a>
+                </div>
+              </div>
+              <div class="product-card swiper-slide">
+                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a></div>
+                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a></h3>
+                <div class="product-card__bottom">
+                  <div class="product-card__price">
+                    <p class="product-card__old-price">19999 грн</p>
+                    <p class="product-card__actual-price">15000 грн</p>
+                  </div>
+                  <a href="" class="product-card__buy button">Купить</a>
+                </div>
+              </div>
+              <div class="product-card swiper-slide">
+                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a></div>
+                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a></h3>
+                <div class="product-card__bottom">
+                  <div class="product-card__price">
+                    <p class="product-card__old-price">19999 грн</p>
+                    <p class="product-card__actual-price">15000 грн</p>
+                  </div>
+                  <a href="" class="product-card__buy button">Купить</a>
+                </div>
+              </div>
+              <div class="product-card swiper-slide">
+                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a></div>
+                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a></h3>
+                <div class="product-card__bottom">
+                  <div class="product-card__price">
+                    <p class="product-card__old-price">19999 грн</p>
+                    <p class="product-card__actual-price">15000 грн</p>
+                  </div>
+                  <a href="" class="product-card__buy button">Купить</a>
                 </div>
               </div>
             </div>
+            <div class="swiper-pagination"></div>
           </div>
+          <button class="swiper-button-prev">
+            <svg width="50" height="50">
+              <use xlink:href="img/icons/icons.svg#swiper-arrow"></use>
+            </svg>
+          </button>
+          <button class="swiper-button-next">
+            <svg width="50" height="50">
+              <use xlink:href="img/icons/icons.svg#swiper-arrow"></use>
+            </svg>
+          </button>
         </div>
       </section>
     </main>
