Fixed popup bags. To top functional and callback module are ready

--- a/src/html/cart-popup.html
+++ b/src/html/cart-popup.html
@@ -1,9 +1,9 @@
-<section data-close-overlay data-popup="cart" class="cart">
-    <div class="cart__content">
-        <div class="cart__container">
-            <div class="cart__header">
-                <h2 class="cart__title title-first">Ваша корзина</h2>
-                <button class="cart__close button-close">
+<section data-close-overlay data-popup="cart" class="cart popup">
+    <div class="popup__content">
+        <div class="popup__container">
+            <div class="popup__header">
+                <h2 class="popup__title title-first">Ваша корзина</h2>
+                <button class="popup__close button-close">
                     <svg width="35" height="35">
                         <use xlink:href="img/icons/icons.svg#close"></use>
                     </svg>
