Test version of footer.

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,5 +1,31 @@
 <footer class="footer">
   <div class="footer__container">
-    
+    <div class="footer__body">
+      <div class="footer-column">
+        <h3 class="footer-column__title">Каталог</h3>
+        <ul class="footer-column__list">
+          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3 class="footer-column__title">Клиентам</h3>
+        <ul class="footer-column__list">
+          <li class="footer-column__item"><a href="">О нас</a></li>
+          <li class="footer-column__item"><a href="">Доставка</a></li>
+          <li class="footer-column__item"><a href="">Гарантия</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3 class="footer-column__title">Связатся с нами</h3>
+        <ul class="footer-column__list">
+          <li class="footer-column__item"><a href="">088-544-4800</a></li>
+          <li class="footer-column__item"><a href="">544-448-7859</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </footer>
