Reliability of header was improved

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -67,6 +67,7 @@
                         <li class="hedaer-catalog__item"><a href="">Ноутбуки</a></li>
                         <li class="hedaer-catalog__item"><a href="">Роутеры</a></li>
                         <li class="hedaer-catalog__item"><a href="">Роутеры</a></li>
+                        <li class="hedaer-catalog__item"><a href="">Ноутбуки</a></li>
                     </ul>
                 </div>
             </li>
