Filter block and selctor for sort for mobile version is ready. NoUiSlider and wNumb lib were added.

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -64,10 +64,10 @@
                 <div class="header-catalog" data-spollers>
                     <button class="header-catalog__btn" type="button" data-spoller>Каталог</button>
                     <ul class="header-catalog__list">
-                        <li class="hedaer-catalog__item"><a href="">Ноутбуки</a></li>
-                        <li class="hedaer-catalog__item"><a href="">Роутеры</a></li>
-                        <li class="hedaer-catalog__item"><a href="">Роутеры</a></li>
-                        <li class="hedaer-catalog__item"><a href="">Ноутбуки</a></li>
+                        <li class="hedaer-catalog__item"><a href="./catalog.html">Ноутбуки</a></li>
+                        <li class="hedaer-catalog__item"><a href="./catalog.html">Роутеры</a></li>
+                        <li class="hedaer-catalog__item"><a href="./catalog.html">Роутеры</a></li>
+                        <li class="hedaer-catalog__item"><a href="./catalog.html">Ноутбуки</a></li>
                     </ul>
                 </div>
             </li>
