--- a/src/catalog.html
+++ b/src/catalog.html
@@ -13,15 +13,142 @@
                     <li class="breadrrumbs__item"><a href="">Главная</a></li>
                     <li class="breadrrumbs__item"><a href="">Ноутбуки</a></li>
                 </ul>
-                <h1 class="catalog-title title-first">Ноутбуки</h1>
-                <select data-speed="300" name="form[]" class="sort">
-                    <option value="1" selected>По возрастанию цены
-                    </option>
-                    <option value="2">По убыванию цены</option>
-                    <option value="3">По убыванию цены</option>
-                    <option value="4">По убыванию цены</option>
-                </select>
-                <button data-type="filter" class="filter__btn">Фильтры</button>
+                <div class="catalog__body">
+                    @@include('html/filter.html')
+                    <div class="calatlog__right-coloumn">
+                        <h1 class="catalog-title title-first">Ноутбуки</h1>
+                        <select data-speed="300" name="form[]" class="sort">
+                            <option value="1" selected>По возрастанию цены
+                            </option>
+                            <option value="2">По убыванию цены</option>
+                            <option value="3">По убыванию цены</option>
+                            <option value="4">По убыванию цены</option>
+                        </select>
+                        <button data-type="filter" class="filter__btn">Фильтры</button>
+                        <section class="calalog__products">
+                            <div class="product-card">
+                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                </div>
+                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                        (G733PY-XS96)</a></h3>
+                                <div class="product-card__bottom">
+                                    <div class="product-card__price">
+                                        <p class="product-card__old-price">19999 грн</p>
+                                        <p class="product-card__actual-price">15000 грн</p>
+                                    </div>
+                                    <a href="" class="product-card__buy button">Купить</a>
+                                </div>
+                            </div>
+                            <div class="product-card">
+                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                </div>
+                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                        (G733PY-XS96)</a></h3>
+                                <div class="product-card__bottom">
+                                    <div class="product-card__price">
+                                        <p class="product-card__old-price">19999 грн</p>
+                                        <p class="product-card__actual-price">15000 грн</p>
+                                    </div>
+                                    <a href="" class="product-card__buy button">Купить</a>
+                                </div>
+                            </div>
+                            <div class="product-card">
+                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                </div>
+                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                        (G733PY-XS96)</a></h3>
+                                <div class="product-card__bottom">
+                                    <div class="product-card__price">
+                                        <p class="product-card__old-price">19999 грн</p>
+                                        <p class="product-card__actual-price">15000 грн</p>
+                                    </div>
+                                    <a href="" class="product-card__buy button">Купить</a>
+                                </div>
+                            </div>
+                            <div class="product-card">
+                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                </div>
+                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                        (G733PY-XS96)</a></h3>
+                                <div class="product-card__bottom">
+                                    <div class="product-card__price">
+                                        <p class="product-card__old-price">19999 грн</p>
+                                        <p class="product-card__actual-price">15000 грн</p>
+                                    </div>
+                                    <a href="" class="product-card__buy button">Купить</a>
+                                </div>
+                            </div>
+                            <div class="product-card">
+                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                </div>
+                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                        (G733PY-XS96)</a></h3>
+                                <div class="product-card__bottom">
+                                    <div class="product-card__price">
+                                        <p class="product-card__old-price">19999 грн</p>
+                                        <p class="product-card__actual-price">15000 грн</p>
+                                    </div>
+                                    <a href="" class="product-card__buy button">Купить</a>
+                                </div>
+                            </div>
+                            <div class="product-card">
+                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                </div>
+                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                        (G733PY-XS96)</a></h3>
+                                <div class="product-card__bottom">
+                                    <div class="product-card__price">
+                                        <p class="product-card__old-price">19999 грн</p>
+                                        <p class="product-card__actual-price">15000 грн</p>
+                                    </div>
+                                    <a href="" class="product-card__buy button">Купить</a>
+                                </div>
+                            </div>
+                            <div class="product-card">
+                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                </div>
+                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                        (G733PY-XS96)</a></h3>
+                                <div class="product-card__bottom">
+                                    <div class="product-card__price">
+                                        <p class="product-card__old-price">19999 грн</p>
+                                        <p class="product-card__actual-price">15000 грн</p>
+                                    </div>
+                                    <a href="" class="product-card__buy button">Купить</a>
+                                </div>
+                            </div>
+                        </section>
+                        <div class="pagging">
+                            <a href="" class="pagging__arrow pagging__arrow_left">
+                                <svg width="28" height="28">
+                                    <use xlink:href="img/icons/icons.svg#arrow-blue"></use>
+                                </svg>
+                            </a>
+                            <ul class="pagging__list">
+                                <li>
+                                    <a href="" class="pagging__item">1</a>
+                                </li>
+                                <li>
+                                    <a href="" class="pagging__item pagging__item_active">2</a>
+                                </li>
+                                <li>
+                                    <a href="" class="pagging__item">3</a>
+                                </li>
+                                <li>
+                                    <span class="pagging__item">...</span>
+                                </li>
+                                <li>
+                                    <a href="" class="pagging__item">10</a>
+                                </li>
+                            </ul>
+                            <a href="" class="pagging__arrow pagging__arrow_right">
+                                <svg width="28" height="28">
+                                    <use xlink:href="img/icons/icons.svg#arrow-blue"></use>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <button class="to-top button-action">
                 <svg width="50" height="50">
@@ -37,7 +164,6 @@
         @@include('html/footer.html')
         @@include('html/cart-popup.html')
         @@include('html/callback.html')
-        @@include('html/filter.html')
     </div>
     @@include('html/script.html')
 </body>
