--- a/src/html/filter.html
+++ b/src/html/filter.html
@@ -32,7 +32,7 @@
       <div class="filter-group__range" id="range"></div>
     </fieldset>
     <fieldset class="filter-group">
-      <legend data-spoller class="filter-group__title _spoller-active">Процессор</legend>
+      <legend data-spoller class="filter-group__title">Процессор</legend>
       <ul class="filter-group__list">
         <li class="filter-group__item">
           <input class="filter-group__checkbox visually-hidden" type="checkbox" name="" id="Intel-Core-I5">
