--- a/src/html/header.html
+++ b/src/html/header.html
@@ -16,7 +16,7 @@
                     </button>
                 </div>
                 <div class="header-interactive__group">
-                    <div data-spollers class="header-contacts">
+                    <div data-spollers data-hover class="header-contacts">
 
                         <button type="button" data-spoller class="header-contacts__btn">
                             <svg width="30" height="30">
@@ -61,7 +61,7 @@
     <nav class="header__bottom">
         <ul class="header-menu">
             <li class="header-menu__item">
-                <div class="header-catalog" data-spollers>
+                <div class="header-catalog" data-spollers data-hover>
                     <button class="header-catalog__btn" type="button" data-spoller>Каталог</button>
                     <ul class="header-catalog__list">
                         <li class="hedaer-catalog__item"><a href="./catalog.html">Ноутбуки</a></li>
