--- a/src/html/header.html
+++ b/src/html/header.html
@@ -74,7 +74,7 @@
             <li class="header-menu__item"><a href="">Акции</a></li>
             <li class="header-menu__item"><a href="">Оплата</a></li>
             <li class="header-menu__item"><a href="">Гарантия</a></li>
-            <li class="header-menu__item"><a href="">Контакты</a></li>
+            <li class="header-menu__item"><a href="./contacts.html">Контакты</a></li>
             <li class="header-menu__item"><a href="">Доставка</a></li>
             <li class="header-menu__item"><a href="">О нас</a></li>
         </ul>
