The mobile version of gallery and product-text are ready

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -27,16 +27,18 @@
                         </div>
                         <section class="calalog__products">
                             <div class="product-card">
-                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg"
+                                            alt="laptop"></a>
                                 </div>
-                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
+                                        SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
                                     <div class="product-card__price">
                                         <p class="product-card__old-price">19999 грн</p>
                                         <p class="product-card__actual-price">15000 грн</p>
                                     </div>
-                                    <a href="" class="product-card__buy button">Купить</a>
+                                    <a href="./product.html" class="product-card__buy button">Купить</a>
                                 </div>
                             </div>
                             <div class="product-card">
