--- a/src/index.html
+++ b/src/index.html
@@ -82,8 +82,10 @@
                 </div>
               </div>
               <div class="product-card swiper-slide">
-                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a></div>
-                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a></h3>
+                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg" alt="laptop"></a>
+                </div>
+                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
+                    (G733PY-XS96)</a></h3>
                 <div class="product-card__bottom">
                   <div class="product-card__price">
                     <p class="product-card__old-price">19999 грн</p>
