--- a/src/product.html
+++ b/src/product.html
@@ -7,7 +7,7 @@
 <body>
     <div class="wrapper">
         @@include('html/header.html')
-        <main class="page catalog">
+        <main class="page product">
             <div class="page__container">
                 <ul class="breadcrumbs">
                     <li class="breadrrumbs__item"><a href="">Главная</a></li>
@@ -56,14 +56,16 @@
                             </div>
                             <button class="product__btn button">Купить</button>
                         </div>
-                        <div data-tabs class="product-add-info">
-                            <nav data-tabs-titles class="product-add-info__navigation">
-                                <button type="button" class="product-add-info__title _tab-active">Оплата</button>
-                                <button type="button" class="product-add-info__title">Доставка</button>
-                                <button type="button" class="product-add-info__title">Доп. услуги</button>
-                            </nav>
-                            <div data-tabs-body class="product-add-info__content">
-                                <div class="product-add-info__body">
+                    </div>
+                    <div data-tabs class="product-add-info">
+                        <nav data-tabs-titles class="product-add-info__navigation">
+                            <button type="button" class="product-add-info__title _tab-active">Оплата</button>
+                            <button type="button" class="product-add-info__title">Доставка</button>
+                            <button type="button" class="product-add-info__title">Доп. услуги</button>
+                        </nav>
+                        <div data-tabs-body class="product-add-info__content">
+                            <div class="product-add-info__body">
+                                <p>
                                     Доставка Новая Почта:​​​​​​ Не все отделения Новой Почты возобновили работу.
                                     ​Отправка товара может занимать 1-3 рабочих дня.По каждому заказу мы уточняем
                                     возможность отправки.
@@ -74,8 +76,10 @@
                                     Предоплата за отправку некоторых товаров: Мониторы/корпусы/крупногабаритные
                                     товары -
                                     500 грн Видеокарты от 20 тис.грн - 300 грн
-                                </div>
-                                <div class="product-add-info__body">
+                                </p>
+                            </div>
+                            <div class="product-add-info__body">
+                                <p>
                                     Новая Почта:​​​​​​ Не все отделения Новой Почты возобновили работу.
                                     ​Отправка товара может занимать 1-3 рабочих дня.По каждому заказу мы уточняем
                                     возможность отправки.
@@ -86,8 +90,10 @@
                                     Предоплата за отправку некоторых товаров: Мониторы/корпусы/крупногабаритные
                                     товары -
                                     500 грн Видеокарты от 20 тис.грн - 300 грн
-                                </div>
-                                <div class="product-add-info__body">
+                                </p>
+                            </div>
+                            <div class="product-add-info__body">
+                                <p>
                                     Не все отделения Новой Почты возобновили работу.
                                     ​Отправка товара может занимать 1-3 рабочих дня.По каждому заказу мы уточняем
                                     возможность отправки.
@@ -98,8 +104,49 @@
                                     Предоплата за отправку некоторых товаров: Мониторы/корпусы/крупногабаритные
                                     товары -
                                     500 грн Видеокарты от 20 тис.грн - 300 грн
-                                </div>
+                                </p>
                             </div>
+                        </div>
+                    </div>
+                    <div data-tabs class="product-details">
+                        <nav data-tabs-titles class="product-details__navigation">
+                            <button type="button" class="product-details__title _tab-active">Описание</button>
+                            <button type="button" class="product-details__title">Характеристики</button>
+                        </nav>
+                        <div data-tabs-body class="product-details__content">
+                            <div class="product-details__body">
+                                <p>
+                                    Предлагаем Вашему вниманию Ноутбук 15.6" Gigabyte AORUS 15 BSF (BSF-73KZ754SD)
+                                    Гарантия:
+                                    24 мес.
+                                </p>
+                            </div>
+                            <table class="table product-details__body">
+                                <tr class="table__row">
+                                    <th class="table__item">Состояние:</th>
+                                    <td class="table__item">Новый</td>
+                                </tr>
+                                <tr class="table__row">
+                                    <th class="table__item">Процессор:</t>
+                                    <td class="table__item">Intel Core i7-13700H</td>
+                                </tr>
+                                <tr class="table__row">
+                                    <th class="table__item">Диагональ экрана:</th>
+                                    <td class="table__item">15.6</td>
+                                </tr>
+                                <tr class="table__row">
+                                    <th class="table__item">Тип матрицы:</th>
+                                    <td class="table__item">IPS</td>
+                                </tr>
+                                <tr class="table__row">
+                                    <th class="table__item">Тип видеокарты:</th>
+                                    <td class="table__item">Дискретная</td>
+                                </tr>
+                                <tr class="table__row">
+                                    <th class="table__item">Объем оперативной памяти:</th>
+                                    <td class="table__item">16 ГБ</td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                 </div>
