--- a/src/index.html
+++ b/src/index.html
@@ -130,12 +130,12 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <button class="swiper-button-prev">
+          <button class="new-prev swiper-button-prev">
             <svg width="50" height="50">
               <use xlink:href="img/icons/icons.svg#swiper-arrow"></use>
             </svg>
           </button>
-          <button class="swiper-button-next">
+          <button class="new-next swiper-button-next">
             <svg width="50" height="50">
               <use xlink:href="img/icons/icons.svg#swiper-arrow"></use>
             </svg>
