--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,29 +1,44 @@
 <footer class="footer">
   <div class="footer__container">
-    <div class="footer__body">
+    <div data-spollers="767" class="footer__body">
       <div class="footer-column">
-        <h3 class="footer-column__title">Каталог</h3>
-        <ul class="footer-column__list">
-          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
-          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
-          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
-          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
-          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
-        </ul>
+        <div class="footer__logo"><img src="img" alt="Logo"></div>
       </div>
-      <div class="footer-column">
-        <h3 class="footer-column__title">Клиентам</h3>
-        <ul class="footer-column__list">
-          <li class="footer-column__item"><a href="">О нас</a></li>
-          <li class="footer-column__item"><a href="">Доставка</a></li>
-          <li class="footer-column__item"><a href="">Гарантия</a></li>
-        </ul>
-      </div>
-      <div class="footer-column">
+      <div class="footer-column footer-column_last">
         <h3 class="footer-column__title">Связатся с нами</h3>
         <ul class="footer-column__list">
           <li class="footer-column__item"><a href="">088-544-4800</a></li>
           <li class="footer-column__item"><a href="">544-448-7859</a></li>
+          <li class="footer-column__item">
+            <a href="">
+              <svg width="25" height="25" fill="white">
+                <use xlink:href="img/icons/icons.svg#telegram"></use>
+              </svg>
+            </a>
+            <a href="">
+              <svg width="25" height="25" fill="white">
+                <use xlink:href="img/icons/icons.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3 data-spoller class="footer-column__title">Каталог</h3>
+        <ul class="footer-column__list">
+          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3 data-spoller class="footer-column__title">Клиентам</h3>
+        <ul class="footer-column__list">
+          <li class="footer-column__item"><a href="">О нас</a></li>
+          <li class="footer-column__item"><a href="">Доставка</a></li>
+          <li class="footer-column__item"><a href="">Гарантия</a></li>
         </ul>
       </div>
     </div>
