The form for reviews page is ready. Gray color has become more contrasting.

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -7,7 +7,7 @@
 <body>
     <div class="wrapper">
         @@include('html/header.html')
-        <main class="page catalog">
+        <main class="page contacts">
             <div class="page__container">
                 <ul class="breadcrumbs">
                     <li class="breadrrumbs__item"><a href="">Главная</a></li>
@@ -25,7 +25,7 @@
                             </ul>
                         </div>
                         <form action="POST" class="form">
-                            <h2 class="form__title title-second">Связатся со мной</h2>
+                            <h2 class="form__title title-second">Обратный звонок</h2>
                             <label class="form__input-label">
                                 <h3 class="form__input-title">Ваше имя и фамилия</h3>
                                 <input class="form__input" type="text" name="name" placeholder="ФИО">
@@ -51,7 +51,7 @@
                         </form>
                     </div>
                     <div class="map">
-                        <h2 class="map__title title-second">Место встречи</h2>
+                        <h2 class="map__title title-second">Место нахождения</h2>
                         <div class="map__iframe">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3630.2856040592796!2d35.03175511527204!3d48.52904652956988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d959dd81bfa351%3A0xc486dacaf2b968c9!2z0JrQsNGA0LDQstCw0L0!5e0!3m2!1sru!2sua!4v1688201465699!5m2!1sru!2sua"
