--- a/src/html/callback.html
+++ b/src/html/callback.html
@@ -2,7 +2,7 @@
     <div class="popup__content">
         <div class="popup__container">
             <div class="popup__header">
-                <h2 class="popup__title title-first">Связатся со мной</h2>
+                <h2 class="popup__title title-first">Обратный звонок</h2>
                 <button class="popup__close button-close">
                     <svg width="35" height="35">
                         <use xlink:href="img/icons/icons.svg#close"></use>
