--- a/src/html/header.html
+++ b/src/html/header.html
@@ -77,6 +77,7 @@
             <li class="header-menu__item"><a href="./contacts.html">Контакты</a></li>
             <li class="header-menu__item"><a href="">Доставка</a></li>
             <li class="header-menu__item"><a href="">О нас</a></li>
+            <li class="header-menu__item"><a href="./reviews.html">Отзывы</a></li>
         </ul>
     </nav>
 </header>
