The sale page is ready. The margin for each section was deleted, margin for the main section was added.

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -71,7 +71,7 @@
                     </ul>
                 </div>
             </li>
-            <li class="header-menu__item"><a href="">Акции</a></li>
+            <li class="header-menu__item"><a href="./sale.html">Акции</a></li>
             <li class="header-menu__item"><a href="">Оплата</a></li>
             <li class="header-menu__item"><a href="">Гарантия</a></li>
             <li class="header-menu__item"><a href="./contacts.html">Контакты</a></li>
