Fixed bags on the catalog and the main page

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -61,7 +61,7 @@
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
                                     <div class="product-card__price">
-                                        <p class="product-card__old-price">19999 грн</p>
+                                        <!-- <p class="product-card__old-price">19999 грн</p> -->
                                         <p class="product-card__actual-price">15000 грн</p>
                                     </div>
                                     <a href="" class="product-card__buy button">Купить</a>
@@ -100,7 +100,7 @@
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
                                     <div class="product-card__price">
-                                        <p class="product-card__old-price">19999 грн</p>
+                                        <!-- <p class="product-card__old-price">19999 грн</p> -->
                                         <p class="product-card__actual-price">15000 грн</p>
                                     </div>
                                     <a href="" class="product-card__buy button">Купить</a>
