--- a/src/html/filter.html
+++ b/src/html/filter.html
@@ -16,6 +16,7 @@
       <h3 class="filter-applied-item__title">Оперативная память:</h3>
       <ul>
         <li class="filter-applied-item__option"><button class="button">8 ГБ</button></li>
+        <li class="filter-applied-item__option"><button class="button">16 ГБ</button></li>
       </ul>
     </li>
   </ul>
