Fixed bags on the callback, contacts and reviews pages

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -14,7 +14,7 @@
                     <li class="breadrrumbs__item"><a href="">Контакты</a></li>
                 </ul>
                 <h1 class="title-first">Контакты</h1>
-                <div class="contacts">
+                <div class="contacts__body">
                     <div class="contacts__left-column">
                         <div class="phones">
                             <h2 class="phones__title title-second">Телефоны</h2>
@@ -64,11 +64,6 @@
             <button class="to-top button-action">
                 <svg width="50" height="50">
                     <use xlink:href="img/icons/icons.svg#more"></use>
-                </svg>
-            </button>
-            <button data-type="callback" class="callback__btn button-action">
-                <svg width="50" height="50">
-                    <use xlink:href="img/icons/icons.svg#phone"></use>
                 </svg>
             </button>
         </main>
