--- a/src/html/callback.html
+++ b/src/html/callback.html
@@ -16,7 +16,7 @@
                 </label>
                 <label class="form__input-label _half-row">
                     <h3 class="form__input-title">Контактный телефон</h3>
-                    <input class="form__input" id="phone" type="tel" name="phone" value="+(38_)-__-___-__-__"
+                    <input class="form__input" id="phone_call" type="tel" name="phone" value="+(38_)-__-___-__-__"
                         autocomplete="off" pattern="+\(38\d\)-\d{2}-\d{3}-\d{2}-\d{2}$/">
                 </label>
                 <label class="form__input-label">
