--- a/src/reviews.html
+++ b/src/reviews.html
@@ -39,7 +39,7 @@
                             <span class="rating__value">3</span>
                         </div>
                     </label>
-                    <label class="form__input-label">
+                    <label class="form__input-label _half-row">
                         <h3 class="form__input-title">Комментарий</h3>
                         <textarea class="form__textarea" name="comment" cols="20" rows="10"
                             placeholder="Отзыв..."></textarea>
