--- a/src/html/header.html
+++ b/src/html/header.html
@@ -25,8 +25,8 @@
                         </button>
                         <div class="header-contacts__body">
                             <ul class="header-phones">
-                                <li class="header-phones__item"><a href="">088-544-4800</a></li>
-                                <li class="header-phones__item"><a href="">544-448-7859</a></li>
+                                <li class="header-phones__item"><a href="tel:+0885444800">088-544-4800</a></li>
+                                <li class="header-phones__item"><a href="tel:+5444487859">544-448-7859</a></li>
                             </ul>
                             <ul class="header-socials">
                                 <li class="header-socials__item">
